--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
-
     <application
         android:name=".Model.myApp"
         android:allowBackup="true"
@@ -13,17 +12,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".IntroActivity" android:noHistory="true"
-            android:label="@string/app_intro" />
-
+        <activity
+            android:name=".IntroActivity"
+            android:label="@string/app_intro"
+            android:noHistory="true" />
+        <activity android:name=".LicenceActivity" android:noHistory="true"></activity>
     </application>
 
 </manifest>
