--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:support-vector-drawable:25.0.0'
     compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile 'com.google.android.gms:play-services-ads:9.8.0'
     testCompile 'junit:junit:4.12'
 }
